Prepare legacy validation for Java 8 tiers