@@ -6,6 +6,8 @@ import java.lang.annotation.Annotation;
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -16,11 +18,15 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class RuleContractTest {
-    private static final Set<String> SUPPORTED_RULE_ANNOTATIONS = Set.of(
+    private static final Set<String> SUPPORTED_RULE_ANNOTATIONS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
             "carpet.api.settings.Rule",
             "carpet.settings.Rule"
-    );
-    private static final Set<String> EXPECTED_CATEGORIES = Set.of("LIR", "FEATURE", "RENEWABLE");
+    )));
+    private static final Set<String> EXPECTED_CATEGORIES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+            "LIR",
+            "FEATURE",
+            "RENEWABLE"
+    )));
 
     @Test
     void everyRuleIsPublicStaticAnnotatedCategorizedAndDisabledByDefault() throws ReflectiveOperationException {
@@ -36,7 +42,7 @@ class RuleContractTest {
 
             List<Annotation> ruleAnnotations = Arrays.stream(field.getDeclaredAnnotations())
                     .filter(annotation -> SUPPORTED_RULE_ANNOTATIONS.contains(annotation.annotationType().getName()))
-                    .toList();
+                    .collect(Collectors.toList());
             assertEquals(1, ruleAnnotations.size(),
                     field.getName() + " must have exactly one supported @Rule annotation");
 
@@ -51,14 +57,14 @@ class RuleContractTest {
             String[] categories = (String[]) categoryValue;
             assertEquals(EXPECTED_CATEGORIES.size(), categories.length,
                     field.getName() + " must not repeat or add rule categories");
-            assertEquals(EXPECTED_CATEGORIES, Set.copyOf(Arrays.asList(categories)),
+            assertEquals(EXPECTED_CATEGORIES, new HashSet<>(Arrays.asList(categories)),
                     field.getName() + " must use exactly the LIR, FEATURE, and RENEWABLE categories");
 
             if (usesLegacyRule) {
                 String description = (String) ruleAnnotation.annotationType()
                         .getMethod("desc")
                         .invoke(ruleAnnotation);
-                assertFalse(description.isBlank(),
+                assertFalse(description.trim().isEmpty(),
                         field.getName() + " legacy @Rule description must not be blank");
             }
 
@@ -71,7 +77,7 @@ class RuleContractTest {
         Set<String> ruleNames = Arrays.stream(LIRSettings.class.getDeclaredFields())
                 .filter(field -> field.getType() == boolean.class)
                 .map(Field::getName)
-                .collect(Collectors.toUnmodifiableSet());
+                .collect(Collectors.toSet());
         Map<String, String> translations = new CarpetLIRAddition().canHasTranslations("en_us");
 
         for (String ruleName : ruleNames) {
@@ -85,7 +91,7 @@ class RuleContractTest {
                 .filter(key -> key.startsWith("carpet.rule."))
                 .filter(key -> key.endsWith(".name") || key.endsWith(".desc"))
                 .map(key -> key.substring("carpet.rule.".length(), key.lastIndexOf('.')))
-                .collect(Collectors.toUnmodifiableSet());
+                .collect(Collectors.toSet());
         assertEquals(ruleNames, translatedRuleNames,
                 "translation resources must not expose rules omitted by the selected capability tier");
     }
