@@ -7,16 +7,22 @@ import org.junit.jupiter.api.Test;
 import org.lavro.carpetlir.CarpetLIRAddition;
 import org.lavro.carpetlir.LIRSettings;
 
+import java.lang.reflect.Field;
+import java.lang.reflect.Modifier;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.LinkedHashMap;
+import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class RecipeToggleFeatureTest {
-    private static final Set<String> KNOWN_RECIPE_PATHS = Set.of(
+    private static final Set<String> KNOWN_RECIPE_PATHS = Collections.unmodifiableSet(
+            Arrays.stream(new String[]{
             "gravel_to_tuff_smelting",
             "lapis_ore_from_calcite_and_amethyst_shard",
             "oak_leaves_from_oak_log_and_sticks",
@@ -32,11 +38,13 @@ class RecipeToggleFeatureTest {
             "raw_iron_from_cobblestone_and_iron_ingot",
             "raw_copper_from_cobblestone_and_copper_ingot",
             "raw_gold_from_cobblestone_and_gold_ingot"
+            }).collect(Collectors.toSet())
     );
+    private static final Map<String, Set<String>> RECIPE_PATHS_BY_RULE = createRecipePathsByRule();
 
     @BeforeEach
     @AfterEach
-    void resetRecipeRules() {
+    void resetRecipeRules() throws IllegalAccessException {
         resetAllRules();
     }
 
@@ -45,7 +53,7 @@ class RecipeToggleFeatureTest {
         Set<Identifier> bundledRecipeIds = KNOWN_RECIPE_PATHS.stream()
                 .filter(RecipeToggleFeatureTest::isBundledRecipe)
                 .map(path -> RecipeToggleFeature.identifierForTest(CarpetLIRAddition.MOD_ID, path))
-                .collect(Collectors.toUnmodifiableSet());
+                .collect(Collectors.toSet());
 
         assertEquals(bundledRecipeIds, RecipeToggleFeature.controlledRecipeIds());
     }
@@ -62,10 +70,36 @@ class RecipeToggleFeatureTest {
 
     @Test
     void eachRuleEnablesOnlyItsRecipeGroup() {
-        assertEnabledRecipes(() -> LIRSettings.renewableTuff = true, "gravel_to_tuff_smelting");
-        assertEnabledRecipes(() -> LIRSettings.renewableLapisOre = true, "lapis_ore_from_calcite_and_amethyst_shard");
-        assertEnabledRecipes(
-                () -> LIRSettings.renewableLeavesCrafting = true,
+        for (Map.Entry<String, Set<String>> entry : RECIPE_PATHS_BY_RULE.entrySet()) {
+            Set<String> bundledPaths = entry.getValue().stream()
+                    .filter(RecipeToggleFeatureTest::isBundledRecipe)
+                    .collect(Collectors.toSet());
+            if (hasRule(entry.getKey())) {
+                assertEnabledRecipes(entry.getKey(), bundledPaths);
+            } else {
+                assertTrue(bundledPaths.isEmpty(),
+                        "recipes for unavailable rule " + entry.getKey() + " must not be bundled");
+            }
+        }
+    }
+
+    private static void assertEnabledRecipes(String ruleName, Set<String> expectedPaths) {
+        resetAllRulesUnchecked();
+        setRule(ruleName, true);
+        Set<Identifier> expected = expectedPaths.stream()
+                .map(path -> RecipeToggleFeature.identifierForTest(CarpetLIRAddition.MOD_ID, path))
+                .collect(Collectors.toSet());
+        Set<Identifier> enabled = RecipeToggleFeature.controlledRecipeIds().stream()
+                .filter(RecipeToggleFeature::isEnabled)
+                .collect(Collectors.toSet());
+        assertEquals(expected, enabled);
+    }
+
+    private static Map<String, Set<String>> createRecipePathsByRule() {
+        Map<String, Set<String>> groups = new LinkedHashMap<>();
+        groups.put("renewableTuff", paths("gravel_to_tuff_smelting"));
+        groups.put("renewableLapisOre", paths("lapis_ore_from_calcite_and_amethyst_shard"));
+        groups.put("renewableLeavesCrafting", paths(
                 "oak_leaves_from_oak_log_and_sticks",
                 "spruce_leaves_from_spruce_log_and_sticks",
                 "birch_leaves_from_birch_log_and_sticks",
@@ -75,27 +109,35 @@ class RecipeToggleFeatureTest {
                 "mangrove_leaves_from_mangrove_log_and_sticks",
                 "cherry_leaves_from_cherry_log_and_sticks",
                 "pale_oak_leaves_from_pale_oak_log_and_sticks"
-        );
-        assertEnabledRecipes(
-                () -> LIRSettings.renewableRawOresCrafting = true,
+        ));
+        groups.put("renewableRawOresCrafting", paths(
                 "raw_iron_from_cobblestone_and_iron_ingot",
                 "raw_copper_from_cobblestone_and_copper_ingot",
                 "raw_gold_from_cobblestone_and_gold_ingot"
-        );
-        assertEnabledRecipes(() -> LIRSettings.renewableHoneycombCrafting = true, "honeycomb_from_honeycomb_block");
+        ));
+        groups.put("renewableHoneycombCrafting", paths("honeycomb_from_honeycomb_block"));
+        return Collections.unmodifiableMap(groups);
     }
 
-    private static void assertEnabledRecipes(Runnable enableRule, String... expectedPaths) {
-        resetAllRules();
-        enableRule.run();
-        Set<Identifier> expected = Stream.of(expectedPaths)
-                .filter(RecipeToggleFeatureTest::isBundledRecipe)
-                .map(path -> RecipeToggleFeature.identifierForTest(CarpetLIRAddition.MOD_ID, path))
-                .collect(Collectors.toUnmodifiableSet());
-        Set<Identifier> enabled = RecipeToggleFeature.controlledRecipeIds().stream()
-                .filter(RecipeToggleFeature::isEnabled)
-                .collect(Collectors.toUnmodifiableSet());
-        assertEquals(expected, enabled);
+    private static Set<String> paths(String... values) {
+        return Collections.unmodifiableSet(Arrays.stream(values).collect(Collectors.toSet()));
+    }
+
+    private static boolean hasRule(String ruleName) {
+        try {
+            LIRSettings.class.getField(ruleName);
+            return true;
+        } catch (NoSuchFieldException ignored) {
+            return false;
+        }
+    }
+
+    private static void setRule(String ruleName, boolean value) {
+        try {
+            LIRSettings.class.getField(ruleName).setBoolean(null, value);
+        } catch (ReflectiveOperationException exception) {
+            throw new AssertionError("Unable to update rule " + ruleName, exception);
+        }
     }
 
     private static boolean isBundledRecipe(String path) {
@@ -109,11 +151,19 @@ class RecipeToggleFeatureTest {
         return false;
     }
 
-    private static void resetAllRules() {
-        LIRSettings.renewableTuff = false;
-        LIRSettings.renewableLapisOre = false;
-        LIRSettings.renewableLeavesCrafting = false;
-        LIRSettings.renewableRawOresCrafting = false;
-        LIRSettings.renewableHoneycombCrafting = false;
+    private static void resetAllRules() throws IllegalAccessException {
+        for (Field field : LIRSettings.class.getDeclaredFields()) {
+            if (field.getType() == boolean.class && Modifier.isStatic(field.getModifiers())) {
+                field.setBoolean(null, false);
+            }
+        }
+    }
+
+    private static void resetAllRulesUnchecked() {
+        try {
+            resetAllRules();
+        } catch (IllegalAccessException exception) {
+            throw new AssertionError("Unable to reset Carpet rules", exception);
+        }
     }
 }
